pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/info.rkt
#lang info

(define test-responsibles '(("with-type3.rkt" (sstrickl samth stamourv asumu endobson))))
